[gd_scene load_steps=6 format=3 uid="uid://cm23pqetbflrq"]

[ext_resource type="Script" path="res://node_classes/ship/ship.gd" id="1_l2p8n"]
[ext_resource type="PackedScene" uid="uid://j72yxl2kkkoo" path="res://scenes/explosions/fire_explosion.tscn" id="2_3ohyu"]
[ext_resource type="Texture2D" uid="uid://c1518wbja6dd" path="res://assets/sprites/ships/spaceShips_001.png" id="3_l4tdl"]
[ext_resource type="StyleBox" uid="uid://c8xpn58skk06e" path="res://styles/hit_points_bar_background.tres" id="4_lbqae"]
[ext_resource type="StyleBox" uid="uid://cvnn0obm23hqj" path="res://styles/hit_points_bar_fill.tres" id="5_n0nwo"]

[node name="Ship" type="Node2D"]
script = ExtResource("1_l2p8n")
speed = 150.0
total_hit_points = 10.0
points = 200.0
explosion = ExtResource("2_3ohyu")

[node name="ShipBody" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5

[node name="Sprite" type="Sprite2D" parent="ShipBody"]
modulate = Color(1.2, 1.1, 1.1, 1)
texture = ExtResource("3_l4tdl")

[node name="HitPoints" type="ProgressBar" parent="."]
visible = false
modulate = Color(1.7, 1.7, 1, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -15.0
offset_right = 50.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = ExtResource("4_lbqae")
theme_override_styles/fill = ExtResource("5_n0nwo")
value = 25.0
show_percentage = false

[connection signal="area_entered" from="ShipBody" to="." method="_on_collision"]
[connection signal="body_entered" from="ShipBody" to="." method="_on_collision"]
